--- a/src/styles/todo-list.scss
+++ b/src/styles/todo-list.scss
@@ -50,7 +50,7 @@
   
       .td-task {
         input {
-          width: 100%;
+          width: 300px;
           height: 100%;
           border: none;
           padding: 5px;
