--- a/src/styles/work-place.scss
+++ b/src/styles/work-place.scss
@@ -39,6 +39,10 @@ position: relative;
         margin-left: 2%;
         transform: translateY(-50%);
       }
+.btn:hover {
+background-color: grey;
+}
+     
   }
  
   }
