--- a/src/styles/first-question.css
+++ b/src/styles/first-question.css
@@ -7,235 +7,146 @@
 
 .container {
   display: flex;
-  flex-direction: row;
+  height: 100vh;
+  overflow: hidden;
 }
-.container .survey {
-  background-color: #f3f3f3;
-  position: relative;
-  width: 100%;
-  height: 900px;
+
+.why {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  padding: 100px 0 0 150px;
-}
-.container .survey .logo {
-  display: flex;
-  align-items: center;
-  width: 80%;
-}
-.container .survey .logo .fa-lemon {
-  font-size: 24px;
-  margin-right: 15px;
-}
-.container .survey h2 {
-  font-size: 36px;
-}
-.container .survey h1 {
-  font-size: 52px;
-}
-.container .survey .options {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-top: 150px;
-  font-size: 36px;
-}
-.container .survey .options .legend {
-  font-weight: 700;
-  font-family: "Klara";
-}
-.container .survey .options .checkbox-option {
-  margin-top: 30px;
-  border: none;
-}
-.container .survey .options .checkbox-option .option1, .container .survey .options .checkbox-option .option2, .container .survey .options .checkbox-option .option3, .container .survey .options .checkbox-option .option4 {
-  display: inline-flex;
-  align-items: center;
+  flex-wrap: wrap;
+  padding: 40px;
   justify-content: center;
-  background: none;
-  border: 2px solid #cdccd0;
-  border-radius: 3vh;
-  margin: 0 2vh 2vh 0;
-  padding: 10px 15px;
-  /* Стилі для вибраного варіанту */
-  /* Додати стилі для "позначки" вибраного варіанту */
-  /* Стилі для вибраного варіанту */
-  /* Додати стилі для "позначки" вибраного варіанту */
-  /* Стилі для вибраного варіанту */
-  /* Додати стилі для "позначки" вибраного варіанту */
-  /* Стилі для вибраного варіанту */
-  /* Додати стилі для "позначки" вибраного варіанту */
+  align-items: center;
 }
-.container .survey .options .checkbox-option .option1 .work, .container .survey .options .checkbox-option .option2 .work, .container .survey .options .checkbox-option .option3 .work, .container .survey .options .checkbox-option .option4 .work {
-  display: none;
+
+.logo {
+  display: flex;
+  margin-bottom: 50px;
+  color: black;
+  border-radius: 10px;
+  padding: 10px;
+  background: rgba(27, 27, 27, 0.4); /* напівпрозорий білий */
+  backdrop-filter: blur(3px); /* розмиття */
+  -webkit-backdrop-filter: blur(3px); /* Safari */
 }
-.container .survey .options .checkbox-option .option1 .custom-work, .container .survey .options .checkbox-option .option2 .custom-work, .container .survey .options .checkbox-option .option3 .custom-work, .container .survey .options .checkbox-option .option4 .custom-work {
-  position: relative;
-  padding-left: 20px; /* Відступ для кастомного елемента */
-  cursor: pointer; /* Курсор-стрілка при наведені */
+.logo .fa-lemon,
+.logo .hello {
+  font-size: 22px !important;
+  margin-right: 10px;
 }
-.container .survey .options .checkbox-option .option1 .custom-work label::before, .container .survey .options .checkbox-option .option2 .custom-work label::before, .container .survey .options .checkbox-option .option3 .custom-work label::before, .container .survey .options .checkbox-option .option4 .custom-work label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 15px; /* Ширина кастомного круга */
-  height: 15px; /* Висота кастомного круга */
-  border: 2px solid #cdccd0; /* Колір обводки */
-  border-radius: 50%; /* Кругла форма */
-  background: white; /* Фоновий колір */
+
+.legend {
+  margin: 50px 0 15px 0;
+  font-size: 24px;
+  color: #767678;
+  font-weight: bold;
 }
-.container .survey .options .checkbox-option .option1 .work:checked + label::before, .container .survey .options .checkbox-option .option2 .work:checked + label::before, .container .survey .options .checkbox-option .option3 .work:checked + label::before, .container .survey .options .checkbox-option .option4 .work:checked + label::before {
-  background: #007BFF; /* Колір заповнення для вибраного варіанту */
-  border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
+
+.checkbox-option {
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
 }
-.container .survey .options .checkbox-option .option1 .work:checked + label::after, .container .survey .options .checkbox-option .option2 .work:checked + label::after, .container .survey .options .checkbox-option .option3 .work:checked + label::after, .container .survey .options .checkbox-option .option4 .work:checked + label::after {
-  content: "";
-  position: absolute;
-  left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-  top: 50%;
-  transform: translateY(-50%);
-  width: 8px; /* Ширина для галочки */
-  height: 8px; /* Висота для галочки */
-  border-radius: 50%; /* Кругла форма для галочки */
-  background: white; /* Колір галочки */
+
+.options {
+  display: flex;
+  flex-direction: column;
+  color: #a0a0a1;
+  max-width: 100%;
+  flex-wrap: wrap;
 }
-.container .survey .options .checkbox-option .option1 .personal, .container .survey .options .checkbox-option .option2 .personal, .container .survey .options .checkbox-option .option3 .personal, .container .survey .options .checkbox-option .option4 .personal {
-  display: none;
+
+.option {
+  display: flex;
+  border: 2px solid #767678;
+  border-radius: 50px;
+  color: #a0a0a1;
+  padding: 10px 20px;
+  margin: 15px 15px 0 0;
 }
-.container .survey .options .checkbox-option .option1 .custom-personal, .container .survey .options .checkbox-option .option2 .custom-personal, .container .survey .options .checkbox-option .option3 .custom-personal, .container .survey .options .checkbox-option .option4 .custom-personal {
-  position: relative;
-  padding-left: 20px; /* Відступ для кастомного елемента */
-  cursor: pointer; /* Курсор-стрілка при наведені */
-}
-.container .survey .options .checkbox-option .option1 .custom-personal label::before, .container .survey .options .checkbox-option .option2 .custom-personal label::before, .container .survey .options .checkbox-option .option3 .custom-personal label::before, .container .survey .options .checkbox-option .option4 .custom-personal label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 15px; /* Ширина кастомного круга */
-  height: 15px; /* Висота кастомного круга */
-  border: 2px solid #cdccd0; /* Колір обводки */
-  border-radius: 50%; /* Кругла форма */
-  background: white; /* Фоновий колір */
-}
-.container .survey .options .checkbox-option .option1 .personal:checked + label::before, .container .survey .options .checkbox-option .option2 .personal:checked + label::before, .container .survey .options .checkbox-option .option3 .personal:checked + label::before, .container .survey .options .checkbox-option .option4 .personal:checked + label::before {
-  background: #007BFF; /* Колір заповнення для вибраного варіанту */
-  border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
-}
-.container .survey .options .checkbox-option .option1 .personal:checked + label::after, .container .survey .options .checkbox-option .option2 .personal:checked + label::after, .container .survey .options .checkbox-option .option3 .personal:checked + label::after, .container .survey .options .checkbox-option .option4 .personal:checked + label::after {
-  content: "";
-  position: absolute;
-  left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-  top: 50%;
-  transform: translateY(-50%);
-  width: 8px; /* Ширина для галочки */
-  height: 8px; /* Висота для галочки */
-  border-radius: 50%; /* Кругла форма для галочки */
-  background: white; /* Колір галочки */
-}
-.container .survey .options .checkbox-option .option1 .study, .container .survey .options .checkbox-option .option2 .study, .container .survey .options .checkbox-option .option3 .study, .container .survey .options .checkbox-option .option4 .study {
-  display: none;
-}
-.container .survey .options .checkbox-option .option1 .custom-study, .container .survey .options .checkbox-option .option2 .custom-study, .container .survey .options .checkbox-option .option3 .custom-study, .container .survey .options .checkbox-option .option4 .custom-study {
-  position: relative;
-  padding-left: 20px; /* Відступ для кастомного елемента */
-  cursor: pointer; /* Курсор-стрілка при наведені */
-}
-.container .survey .options .checkbox-option .option1 .custom-study label::before, .container .survey .options .checkbox-option .option2 .custom-study label::before, .container .survey .options .checkbox-option .option3 .custom-study label::before, .container .survey .options .checkbox-option .option4 .custom-study label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 15px; /* Ширина кастомного круга */
-  height: 15px; /* Висота кастомного круга */
-  border: 2px solid #cdccd0; /* Колір обводки */
-  border-radius: 50%; /* Кругла форма */
-  background: white; /* Фоновий колір */
-}
-.container .survey .options .checkbox-option .option1 .study:checked + label::before, .container .survey .options .checkbox-option .option2 .study:checked + label::before, .container .survey .options .checkbox-option .option3 .study:checked + label::before, .container .survey .options .checkbox-option .option4 .study:checked + label::before {
-  background: #007BFF; /* Колір заповнення для вибраного варіанту */
-  border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
-}
-.container .survey .options .checkbox-option .option1 .study:checked + label::after, .container .survey .options .checkbox-option .option2 .study:checked + label::after, .container .survey .options .checkbox-option .option3 .study:checked + label::after, .container .survey .options .checkbox-option .option4 .study:checked + label::after {
-  content: "";
-  position: absolute;
-  left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-  top: 50%;
-  transform: translateY(-50%);
-  width: 8px; /* Ширина для галочки */
-  height: 8px; /* Висота для галочки */
-  border-radius: 50%; /* Кругла форма для галочки */
-  background: white; /* Колір галочки */
-}
-.container .survey .options .checkbox-option .option1 .nonprofit, .container .survey .options .checkbox-option .option2 .nonprofit, .container .survey .options .checkbox-option .option3 .nonprofit, .container .survey .options .checkbox-option .option4 .nonprofit {
-  display: none;
-}
-.container .survey .options .checkbox-option .option1 .custom-nonprofit, .container .survey .options .checkbox-option .option2 .custom-nonprofit, .container .survey .options .checkbox-option .option3 .custom-nonprofit, .container .survey .options .checkbox-option .option4 .custom-nonprofit {
-  position: relative;
-  padding-left: 20px; /* Відступ для кастомного елемента */
-  cursor: pointer; /* Курсор-стрілка при наведені */
-}
-.container .survey .options .checkbox-option .option1 .custom-nonprofit label::before, .container .survey .options .checkbox-option .option2 .custom-nonprofit label::before, .container .survey .options .checkbox-option .option3 .custom-nonprofit label::before, .container .survey .options .checkbox-option .option4 .custom-nonprofit label::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
-  width: 15px; /* Ширина кастомного круга */
-  height: 15px; /* Висота кастомного круга */
-  border: 2px solid #cdccd0; /* Колір обводки */
-  border-radius: 50%; /* Кругла форма */
-  background: white; /* Фоновий колір */
-}
-.container .survey .options .checkbox-option .option1 .nonprofit:checked + label::before, .container .survey .options .checkbox-option .option2 .nonprofit:checked + label::before, .container .survey .options .checkbox-option .option3 .nonprofit:checked + label::before, .container .survey .options .checkbox-option .option4 .nonprofit:checked + label::before {
-  background: #007BFF; /* Колір заповнення для вибраного варіанту */
-  border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
-}
-.container .survey .options .checkbox-option .option1 .nonprofit:checked + label::after, .container .survey .options .checkbox-option .option2 .nonprofit:checked + label::after, .container .survey .options .checkbox-option .option3 .nonprofit:checked + label::after, .container .survey .options .checkbox-option .option4 .nonprofit:checked + label::after {
-  content: "";
-  position: absolute;
-  left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-  top: 50%;
-  transform: translateY(-50%);
-  width: 8px; /* Ширина для галочки */
-  height: 8px; /* Висота для галочки */
-  border-radius: 50%; /* Кругла форма для галочки */
-  background: white; /* Колір галочки */
-}
-.container .survey .options label {
+
+label {
   margin-left: 10px;
-  font-size: 24px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
-.container .survey .btn-continue {
-  position: absolute;
-  bottom: 20vh;
-  right: 10vh;
-  width: 200px;
-  font-size: 26px;
-  padding: 10px 15px;
-  border-radius: 5px;
+
+.btn-continue {
+  width: 145px;
+  height: 45px;
+  background: #0076f1;
+  border-radius: 10px;
   border: none;
-  background-color: #3173e1;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 16px;
   color: white;
+  margin-top: 100px;
 }
-.container .survey .btn-continue .fa-solid {
-  font-size: 18px;
-  margin-left: 10px;
+
+.bg-photo {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
 }
-.container .survey .btn-continue:hover {
-  cursor: pointer;
-  background-color: #285db7;
+.bg-photo .first-bg {
+  max-width: 100%;
+  height: auto;
 }
-.container .friend {
-  width: 750px;
-  height: 100%;
-  background-image: url("../image/first-page-bg.jpeg");
-  background-size: contain;
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .logo {
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: -170px;
+  }
+  .logo h1,
+  .logo .fa-lemon {
+    font-size: 24px !important;
+  }
+  .legend {
+    color: white;
+    margin-top: 50px;
+  }
+  .bg-photo {
+    width: 100vw;
+    height: 100vh;
+    z-index: -1000;
+    position: absolute;
+  }
+  .bg-photo .first-bg {
+    width: 100vw;
+    height: 100vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .why {
+    position: relative;
+    z-index: 1000;
+  }
+  .options {
+    background: rgba(27, 27, 27, 0.4); /* напівпрозорий білий */
+    backdrop-filter: blur(3px); /* розмиття */
+    -webkit-backdrop-filter: blur(3px); /* Safari */
+    align-items: center;
+    border-radius: 10px;
+  }
+  .option {
+    color: white;
+    border: 2px solid white;
+    margin-left: 15px;
+  }
+  .btn-continue {
+    margin: 35px 0 50px 0;
+  }
 }/*# sourceMappingURL=first-question.css.map */
