--- a/src/styles/first-question.scss
+++ b/src/styles/first-question.scss
@@ -1,288 +1,149 @@
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
+
 .container {
-    display: flex;
-    flex-direction: row;
-    // justify-content: center;
-    // align-items: center;
-.survey {
-    background-color: #f3f3f3;
-    position: relative;
-    width: 100%;
-    height: 900px;
-
-    display: flex;
-   
-    flex-direction: column;
-    
-    padding: 100px 0 0 150px;
+  display: flex;
+  height: 100vh;
+  overflow: hidden;
+}
+.why {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  padding: 40px;
+  justify-content: center;
+  align-items: center;
+}
 .logo {
-display: flex;
-align-items: center;
-width: 80%;
-.fa-lemon {
-font-size: 24px;
-margin-right: 15px;
+  display: flex;
+  margin-bottom: 50px;
+  color: black;
+  border-radius: 10px;
+  padding: 10px;
+  background: rgba(27, 27, 27, 0.4); /* напівпрозорий білий */
+  backdrop-filter: blur(3px); /* розмиття */
+  -webkit-backdrop-filter: blur(3px); /* Safari */
+  .fa-lemon,
+  .hello {
+    font-size: 22px !important;
+    margin-right: 10px;
+  }
 }
+.legend {
+  margin: 50px 0 15px 0;
+  font-size: 24px;
+  color: #767678;
+  font-weight: bold;
 }
-h2 {
-    // background-color: red;
-   
-    font-size: 36px;
-}
-
-h1 {
-    // background-color: aqua;
-    font-size: 52px;
+.checkbox-option {
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 800px;
 }
 .options {
-    // background-color: yellow;
-    display: flex;
-    // flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
-   margin-top: 150px;
-
-    // width: 600px;
-    // height: 30vh;
-    // align-items: center;
-    font-size: 36px;
-
-    .legend {
-        font-weight: 700;
-        font-family: "Klara";
-      }
-
-.checkbox-option {
-margin-top: 30px;
-border: none;
-// 
-   .option1, .option2, .option3, .option4 {
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    
-    background: none;
-    border: 2px solid #cdccd0;
-    border-radius: 3vh;
-    margin: 0 2vh 2vh 0;
-    padding: 10px 15px;
-// 
-  .work {
-    display: none;
-  }
-
-  .custom-work {
-    position: relative;
-    padding-left: 20px; /* Відступ для кастомного елемента */
-    cursor: pointer; /* Курсор-стрілка при наведені */
-  }
-  .custom-work label::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px; /* Ширина кастомного круга */
-    height: 15px; /* Висота кастомного круга */
-    border: 2px solid #cdccd0; /* Колір обводки */
-    border-radius: 50%; /* Кругла форма */
-    background: white; /* Фоновий колір */
+  display: flex;
+  flex-direction: column;
+  color: #a0a0a1;
+  max-width: 100%;
+  flex-wrap: wrap;
+}
+.option {
+  display: flex;
+  border: 2px solid #767678;
+  border-radius: 50px;
+  color: #a0a0a1;
+  padding: 10px 20px;
+  margin: 15px 15px 0 0;
 }
 
-/* Стилі для вибраного варіанту */
-.work:checked + label::before {
-    background: #007BFF; /* Колір заповнення для вибраного варіанту */
-    border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
+label {
+  margin-left: 10px;
 }
 
-/* Додати стилі для "позначки" вибраного варіанту */
-.work:checked + label::after {
-    content: '';
-    position: absolute;
-    left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-    top: 50%;
-    transform: translateY(-50%);
-    width: 8px; /* Ширина для галочки */
-    height: 8px; /* Висота для галочки */
-    border-radius: 50%; /* Кругла форма для галочки */
-    background: white; /* Колір галочки */
-}
-
-//
-// 
-.personal {
-    display: none;
-  }
-
-  .custom-personal {
-    position: relative;
-    padding-left: 20px; /* Відступ для кастомного елемента */
-    cursor: pointer; /* Курсор-стрілка при наведені */
-  }
-  .custom-personal label::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px; /* Ширина кастомного круга */
-    height: 15px; /* Висота кастомного круга */
-    border: 2px solid #cdccd0; /* Колір обводки */
-    border-radius: 50%; /* Кругла форма */
-    background: white; /* Фоновий колір */
-}
-
-/* Стилі для вибраного варіанту */
-.personal:checked + label::before {
-    background: #007BFF; /* Колір заповнення для вибраного варіанту */
-    border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
-}
-
-/* Додати стилі для "позначки" вибраного варіанту */
-.personal:checked + label::after {
-    content: '';
-    position: absolute;
-    left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-    top: 50%;
-    transform: translateY(-50%);
-    width: 8px; /* Ширина для галочки */
-    height: 8px; /* Висота для галочки */
-    border-radius: 50%; /* Кругла форма для галочки */
-    background: white; /* Колір галочки */
-}
-
-// 
-// 
-.study {
-    display: none;
-  }
-
-  .custom-study {
-    position: relative;
-    padding-left: 20px; /* Відступ для кастомного елемента */
-    cursor: pointer; /* Курсор-стрілка при наведені */
-  }
-  .custom-study label::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px; /* Ширина кастомного круга */
-    height: 15px; /* Висота кастомного круга */
-    border: 2px solid #cdccd0; /* Колір обводки */
-    border-radius: 50%; /* Кругла форма */
-    background: white; /* Фоновий колір */
-}
-
-/* Стилі для вибраного варіанту */
-.study:checked + label::before {
-    background: #007BFF; /* Колір заповнення для вибраного варіанту */
-    border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
-}
-
-/* Додати стилі для "позначки" вибраного варіанту */
-.study:checked + label::after {
-    content: '';
-    position: absolute;
-    left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-    top: 50%;
-    transform: translateY(-50%);
-    width: 8px; /* Ширина для галочки */
-    height: 8px; /* Висота для галочки */
-    border-radius: 50%; /* Кругла форма для галочки */
-    background: white; /* Колір галочки */
-}
-// 
-
-// 
-.nonprofit {
-    display: none;
-  }
-
-  .custom-nonprofit {
-    position: relative;
-    padding-left: 20px; /* Відступ для кастомного елемента */
-    cursor: pointer; /* Курсор-стрілка при наведені */
-  }
-  
-  .custom-nonprofit label::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px; /* Ширина кастомного круга */
-    height: 15px; /* Висота кастомного круга */
-    border: 2px solid #cdccd0; /* Колір обводки */
-    border-radius: 50%; /* Кругла форма */
-    background: white; /* Фоновий колір */
-}
-
-/* Стилі для вибраного варіанту */
-.nonprofit:checked + label::before {
-    background: #007BFF; /* Колір заповнення для вибраного варіанту */
-    border: 1px solid #0056b3; /* Тінь для вибраного варіанту */
-}
-
-/* Додати стилі для "позначки" вибраного варіанту */
-.nonprofit:checked + label::after {
-    content: '';
-    position: absolute;
-    left: 0.5vh; /* Відступ від лівого краю кастомного круга */
-    top: 50%;
-    transform: translateY(-50%);
-    width: 8px; /* Ширина для галочки */
-    height: 8px; /* Висота для галочки */
-    border-radius: 50%; /* Кругла форма для галочки */
-    background: white; /* Колір галочки */
-}
-
-
-
-   }
-}
-   label {
-    margin-left: 10px;
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   }
-}
 .btn-continue {
+  width: 145px;
+  height: 45px;
+  background: #0076f1;
+  border-radius: 10px;
+  border: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 16px;
+  color: white;
+  margin-top: 100px;
+}
+
+.bg-photo {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  .first-bg {
+    max-width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+  .logo {
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: -170px;
+    h1,
+    .fa-lemon {
+      font-size: 24px !important;
+    }
+  }
+  .legend {
+    color: white;
+    margin-top: 50px;
+  }
+
+  .bg-photo {
+    width: 100vw;
+    height: 100vh;
+    z-index: -1000;
     position: absolute;
-    bottom: 20vh;
-    right: 10vh;
-    width: 200px;
-    font-size: 26px;
-    padding: 10px 15px;
-border-radius: 5px;
-border: none;
-background-color: #3173e1;
-color: white;
-.fa-solid {
-font-size: 18px;
-margin-left: 10px;
-}
+  }
+  .bg-photo {
+    .first-bg {
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+    }
+  }
+  .why {
+    position: relative;
+    z-index: 1000;
+  }
+  .options {
+    background: rgba(27, 27, 27, 0.4); /* напівпрозорий білий */
+    backdrop-filter: blur(3px); /* розмиття */
+    -webkit-backdrop-filter: blur(3px); /* Safari */
+    align-items: center;
+    border-radius: 10px;
+  }
 
-&:hover {
-    cursor: pointer;
-background-color: #285db7;
-}
-}
+  .option {
+    color: white;
+    border: 2px solid white;
+    margin-left: 15px;
+  }
 
-}
-.friend {
-   
-    width: 750px;
-    height: 100%;
-    background-image: url('../image/first-page-bg.jpeg');
-    background-size: contain;
-
-}
+  .btn-continue {
+    margin: 35px 0 50px 0;
+  }
 }
