--- a/src/styles/survey.css
+++ b/src/styles/survey.css
@@ -1,1 +1,19 @@
-/*# sourceMappingURL=survey.css.map */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Karla";
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+}
+.container .friend {
+  background-color: red;
+  height: 900px;
+}
+.container .friend .first-bg {
+  width: 100%;
+  height: 100%;
+}/*# sourceMappingURL=survey.css.map */
