--- a/src/styles/survey.scss
+++ b/src/styles/survey.scss
@@ -1,26 +1,26 @@
-// *{
-//     box-sizing: border-box;
-//     margin: 0;
-//     padding: 0;
-//     font-family: "Karla";
-// }
-// .container {
-//     display: flex;
-//     flex-direction: row;
-//     // justify-content: center;
-//     // align-items: center;
-
-//     .friend {
-//         background-color: red;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "Karla";
+}
+.container {
+    display: flex;
+    flex-direction: row;
+    // justify-content: center;
+    // align-items: center;
+// background: pink;
+    .friend {
+        background-color: red;
         
-//         height: 900px;
+        height: 900px;
   
     
-//         .first-bg {
-//     width: 100%;
-//     height: 100%;
+        .first-bg {
+    width: 100%;
+    height: 100%;
     
-//         }
-//     }
-// }
+        }
+    }
+}
 
